# sea

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  COPYRIGHT.txt  Cargo.toml  Doxyfile  LICENSE  LICENSE.MPL-2.0  LICENSE.txt  Makefile  README.md  README.org
.ci/: build-casmi.yml  casmi.yml  example.yml  pipeline.yml  test.yml
.ci/job/: .fetch_build_test  .yml.template  attic  casm.yml  casmc  casmc.yml  casmd.yml  casmf.yml  casmi.yml  external-fork.yml  external.yml  gtest.yml  hayai.yml  libcasm-be.yml  libcasm-fe.yml  libcasm-ir.yml  libcasm-rt.yml  libcasm-tc.yml  libcjel-ir.yml  libcjel-rt.yml  libgtest.yml  libhayai.yml  libpass.yml  libstdhl.yml  libtptp.yml  nightly-nodeps.yml  nightly.yml  release-nodeps.yml  release.yml
.ci/pipeline/: casm.yml  casmi.yml  development.yml  forks.yml  full.yml  legacy.yml  nightly.yml  release.yml  status.yml  test.yml
.ci/resource/: _asmjit.yml  _z3.yml  after-midnight.yml  around-noon.yml  artifact.yml  asdf.yml  casm  casm-lang-status.yml  casm-lang.yml  casm.yml  casmc.yml  casmf.yml  casmi.yml  config.yml  gtest.yml  hayai.yml  in-the-evening.yml  in-the-morning.yml  libcasm-be.yml  libcasm-fe.yml  libcasm-ir.yml  libcasm-rt.yml  libcasm-tc.yml  libcjel-rt.yml  libgtest.yml  libnovel.yml  libpass.yml  libstdhl.yml  mail  notify-by-mail.yml  notify.yml  rsync.todo  send-email.yml  send-matrix.yml  unused
.ci/script/: build  build.sh  fetch  fetch-casmi  fetch-deps  fetch-deps.sh  fetch-libs  fetch-libs.sh  fetch.sh  info  mail.sh  make.sh  pipeline.sh  test  test-run  test-run.sh  test.sh
.ci/sh/: build  test
.ci/step/: external_build_test.yml  fetch_build_test.yml  fetch_deps_build_test.yml  libasmjit-gcc.yml  libasmjit.yml  libgtest-gcc.yml  libgtest.yml  libhayai-gcc.yml  libhayai.yml  libz3-gcc.yml  libz3.yml  notification.yml  notify_build_test.yml  notify_deps_build_test.yml  repo-get-config.yml  repo-get-pass.yml  repo-get-trig-pass.yml  repo-get-trig.yml  repo-get.yml  send-email.yml
.ci/task/: benchmark.yml  build-casmi.yml  build.yml  deps.yml  example.yml  fetch-casmi.yml  fetch-deps0.yml  fetch-deps1.yml  fetch-deps3.yml  fetch-deps4.yml  fetch.yml  mail.yml  test-run.yml  test.yml
.ci/task/fetch/: 1.yml  10.yml  11.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml  deps0.yml  deps1.yml  deps2.yml  deps3.yml  deps4.yml  deps5.yml  deps6.yml  deps7.yml  deps8.yml  deps9.yml  libs0.yml  libs1.yml  libs2.yml  libs3.yml  libs4.yml  libs5.yml  libs6.yml  libs7.yml  libs8.yml  libs9.yml
.ci/type/: email-resource.yml  git-resource.yml  mail-resource.yml  matrix-notification-resource.yml  matrix-resource.yml  rsync-resource.yml  status-github.yml
.cmake/: LibPackage.cmake  config.mk
.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.org  CODING_GUIDELINES.org  CONTRIBUTING.md  CONTRIBUTING.org  CONTRIBUTING_SUBMODULE.org  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  status.org
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  hhh.md  question.md
.github/pages/: config.toml
.github/pages/content/: _index.md
.github/pages/content/blog/2024/04/01/: _index.md
.github/pages/content/site/: notice.md
.github/pages/sass/: _custom.scss
.github/pages/static/: CNAME
.github/pages/templates/: index.html  robots.txt
.github/pages/templates/blog/: page.html
.github/pages/templates/docs/: page.html
.github/pages/templates/macros/: docs-edit-page.html  header.html
.github/pages/templates/shortcodes/: license.html  load_md.md  y
.github/pages/themes/: adidoks
.github/workflows/: build.yml  github-pages.yaml  nightly.yml  release.yml
app/: README.org
doc/: README.org  _index.md  main.md
doc/contributing/: code-of-conduct.md  how-to-contribute.md  license.md
doc/getting-started/: _index.md  introduction.md  quick-start.md
doc/help/: _index.md  faq.md
doc/language/: README.org  syntax.org
doc/language/grammar/: Assignment.org  Assignments.org  Attribute.org  AttributedDefinition.org  AttributedLocalFunctionDefinition.org  AttributedVariable.org  AttributedVariables.org  Attributes.org  BasicAttribute.org  BasicType.org  BinaryLiteral.org  BlockRule.org  BooleanLiteral.org  CallExpression.org  CallRule.org  CardinalityExpression.org  CaseLabel.org  CaseLabels.org  CaseRule.org  ChooseExpression.org  ChooseRule.org  ConditionalExpression.org  ConditionalRule.org  DecimalLiteral.org  Definition.org  Definitions.org  DerivedDefinition.org  DirectCallExpression.org  EnumerationDefinition.org  EnumeratorDefinition.org  Enumerators.org  ExistentialQuantifierExpression.org  ExpressionAttribute.org  FixedSizedType.org  ForallRule.org  FunctionDefinition.org  FunctionParameters.org  Header.org  Identifier.org  IdentifierPath.org  (+57 more)
doc/release/: 0.1.0.org  0.2.0.org  0.3.0.org  0.4.0.org  0.5.0.org  0.6.0.org
ext/: README.org
lib/: README.org
pkg/: README.org
src/: casm-benchmark  casm-benchmark.bat  casm-test  casm-test.bat  lib.rs  main.rs
var/: README.org
var/doc/: main.md
var/release/: 0.1.0.txt
